[package]
name = "richard-test"
version = "0.1.11"
edition = "2021"
license = "MIT"
description = "test-package"
homepage = "http://example.com"
documentation = "http://example.com"
repository = "http://example.com"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "c1"
]

[dependencies]
